--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@aws-sdk/client-dynamodb": "^3.563.0",
     "@aws-sdk/lib-dynamodb": "^3.563.0",
     "body-parser": "^1.20.2",
+    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
