--- a/package.json
+++ b/package.json
@@ -25,19 +25,22 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.563.0",
     "@aws-sdk/lib-dynamodb": "^3.563.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
-    "joi": "^17.13.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "node-cache": "^5.1.2",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "@vitest/coverage-v8": "^1.4.0",
