--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noPropertyAccessFromIndexSignature": false,
     "skipLibCheck": true,
     "ignoreDeprecations": "5.0",
-    "types": ["vitest/globals"]
+    "typeRoots": ["./types", "./node_modules/@types"]
   },
   "extends": [],
   "exclude": ["node_modules"],
