--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "npm": "^10.5.0"
   },
   "scripts": {
-    "dev": "tsx watch --clear-screen=false --inspect src/index.ts",
+    "dev": "tsx watch --clear-screen=false --inspect src/index.ts | pino-pretty",
     "build": "rimraf dist && tsup",
     "start": "node dist/index.js",
     "clean": "rimraf dist coverage",
@@ -34,6 +34,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
+    "pino-http": "^9.0.0",
     "zod": "^3.23.4"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "pino-pretty": "^11.0.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
